Changes to build files to work with JDK 11.